deploy: 77d936f7f21d4809fbe879c40a53e80176ed9be3

--- a/workshop/trash-panda.html
+++ b/workshop/trash-panda.html
@@ -671,11 +671,11 @@ Here is a video (thanks to Trevor) showing the progress of the interface at vari
         </p>
       </div>
       <div class="footer-col">
-        <p>An easy to use blogging platform with support for Jupyter Notebooks.</p>
+        <p>Fast and YI</p>
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/fastai" title="fastai"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/fastdotai" title="fastdotai"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/tobias-fyi" title="tobias-fyi"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/tobiasfyi" title="tobiasfyi"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
