--- a/markdown/test-markdown-post.html
+++ b/markdown/test-markdown-post.html
@@ -260,11 +260,11 @@ wget https://example.com/cat_photo1.png
         </p>
       </div>
       <div class="footer-col">
-        <p>An easy to use blogging platform with support for Jupyter Notebooks.</p>
+        <p>Fast and YI</p>
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/fastai" title="fastai"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/fastdotai" title="fastdotai"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/tobias-fyi" title="tobias-fyi"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/tobiasfyi" title="tobiasfyi"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
