--- a/search/index.html
+++ b/search/index.html
@@ -10,13 +10,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Tobias’ little slice of internet." />
 <meta property="og:description" content="Tobias’ little slice of internet." />
-<link rel="canonical" href="https://tobias-fyi.github.io/fastfyi/search/" />
-<meta property="og:url" content="https://tobias-fyi.github.io/fastfyi/search/" />
+<link rel="canonical" href="https://tobias.fyi/search/" />
+<meta property="og:url" content="https://tobias.fyi/search/" />
 <meta property="og:site_name" content="tobias.fyi" />
 <script type="application/ld+json">
-{"url":"https://tobias-fyi.github.io/fastfyi/search/","@type":"WebPage","headline":"Search","description":"Tobias’ little slice of internet.","@context":"https://schema.org"}</script>
+{"url":"https://tobias.fyi/search/","@type":"WebPage","headline":"Search","description":"Tobias’ little slice of internet.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/fastfyi/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://tobias-fyi.github.io/fastfyi/feed.xml" title="tobias.fyi" /><link rel="shortcut icon" type="image/x-icon" href="/fastfyi/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://tobias.fyi/feed.xml" title="tobias.fyi" /><link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/katex.min.css" integrity="sha512-h7nl+xz8wgDlNM4NqKEM4F1NkIRS17M9+uJwIGwuo8vGqIl4BhuCKdxjWEINm+xyrUjNCnK5dCrhM0sj+wTIXw==" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/katex.min.js" integrity="sha512-/CMIhXiDA3m2c9kzRyd97MTb3MC6OVnx4TElQ7fkkoRghwDf6gi41gaT1PwF270W6+J60uTmwgeRpNpJdRV6sg==" crossorigin="anonymous"></script>
@@ -67,7 +67,7 @@ window.onload = wrap_img;
 </head>
 <body><header class="site-header">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/fastfyi/">tobias.fyi</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/">tobias.fyi</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -77,14 +77,14 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/fastfyi/about/">About Me</a><a class="page-link" href="/fastfyi/search/">Search</a><a class="page-link" href="/fastfyi/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/about/">About Me</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <!-- adapted from https://github.com/pmarsceill/just-the-docs -->
-<script type="text/javascript" src="/fastfyi/assets/js/search.js"></script>
-<script type="text/javascript" src="/fastfyi/assets/js/vendor/lunr.min.js"></script>
+<script type="text/javascript" src="/assets/js/search.js"></script>
+<script type="text/javascript" src="/assets/js/vendor/lunr.min.js"></script>
 
 <div class="search">
     <div class="search-input-wrap">
@@ -96,16 +96,16 @@ window.onload = wrap_img;
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/fastfyi/"></data>
+  <data class="u-url" href="/"></data>
 
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/fastfyi/feed.xml">
+          <a href="/feed.xml">
             <svg class="svg-icon orange">
-              <use xlink:href="/fastfyi/assets/minima-social-icons.svg#rss"></use>
+              <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
           </a>
         </p>
@@ -115,7 +115,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/tobias-fyi" title="tobias-fyi"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/tobiasfyi" title="tobiasfyi"><svg class="svg-icon grey"><use xlink:href="/fastfyi/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/tobias-fyi" title="tobias-fyi"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/tobiasfyi" title="tobiasfyi"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
