Config of home, about, and logos

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 ---
 layout: home
 search_exclude: true
-image: images/logo.png
+image: images/tobiasfyi-logo-text.png
 ---
 
 # Tobias E. A. Reaper
+
+Welcome to my little slice of internet
+
+I'm a software engineer, data scientist, writer, tricker (beginner), and musician currently living in Denver, Colorado.
 
 # Posts
