deploy: 45b9d60fc735011b05e482e37d4a8369daf1a470

--- a/workshop/trash-panda.html
+++ b/workshop/trash-panda.html
@@ -691,7 +691,7 @@ Here is a video (thanks to Trevor) showing the progress of the interface at vari
         </p>
       </div>
       <div class="footer-col">
-        <p>Tobias&#39; little slice of internet.</p>
+        <p>Tobias Reaper</p>
       </div>
     </div>
 
