--- a/workshop/post-here.html
+++ b/workshop/post-here.html
@@ -2191,7 +2191,7 @@ Average length is: 4.229050279329609.
         </p>
       </div>
       <div class="footer-col">
-        <p>Tobias&#39; little slice of internet.</p>
+        <p>Tobias Reaper</p>
       </div>
     </div>
 
