--- a/workshop/print-fiction.html
+++ b/workshop/print-fiction.html
@@ -8233,7 +8233,7 @@ Name: index, dtype: int64</pre>
         </p>
       </div>
       <div class="footer-col">
-        <p>Tobias&#39; little slice of internet.</p>
+        <p>Tobias Reaper</p>
       </div>
     </div>
 
