Some minor updates to notebooks and home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ image: images/tobiasfyi-logo-text.png
 
 Welcome to my little slice of internet
 
-I'm a software engineer, data scientist, writer, tricker (beginner), and musician currently living in Denver, Colorado.
+I'm a software engineer, data scientist, writer, and musician currently living in Denver, Colorado.
 
 # Posts
